fixing SD verification
